2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/tinyaes.c:
	  AES regression test.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdatomic.h,
	  device/lib/tlcs90/atomic_flag_test_and_set.s,
	  device/lib/atomic_flag_clear.c:
	  Improve atomic_flag using TLCS-90 test-and-set instruction.
	* sdas/astlcs90/t90.h,
	  sdas/astlcs90/t90mch.c,
	  sdas/astlcs90/t90pst.c:
	  Support tset.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve use of ldw for 8-bit assignment.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/makebin/makebin.c:
	  Fix buffer overflow, patch #400 by bbbbbr.

2021-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/makebin/makebin.c:
	  Option for logo omission, patch #395 by bbbbbr.

2021-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix issues in cost handling for large functions.

2021-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Peephole rule refactoring inspired by fix to a bug found by roybaer.

2021-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/_divulong.s,
	  device/lib/stm8/_modulong.s,
	  device/lib/stm8/Makefile.in,
	  src/stm8/peeph.def:
	  Revert some hand-written asm back to generic C, since SDCC now generates better code.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/btowc.c:
	  Fix btowc handling of int values that are valid characters when cast to unsigned char.

2021-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide left shift by literal.

2021-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code cleanup.
	* device/lib/_strchr.c:
	  Fix strchr handling of c outside of char range.

2021-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/__mulsint2slong.s:
	  Improve int x int -> long multiplication for z80.
